[package]
name = "micro_notion"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = "z"     # サイズ最小化
lto = true          # リンク時最適化
codegen-units = 1   # コンパイル時間は伸びるがバイナリが小さく高効率になる
panic = "abort"     # エラーハンドリングのオーバーヘッドを削除
