[package]
name = "pico_potion"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = "z"     # サイズ最小化
lto = true          # リンク時最適化
codegen-units = 1   # コンパイル時間は伸びるがバイナリが小さく高効率になる
panic = "abort"     # エラーハンドリングのオーバーヘッドを削除
